# ugY3-REDengine

./: README.md  RED-Engine.dia
Red/: CMakeLists.txt
Red/resources/shaders/: simple.frag  simple.vert
Red/src/: Doxyfile
Red/src/Red/: BoxCollision.cpp  BoxCollision.h  Camera.cpp  Camera.h  Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  KeyboardInput.cpp  KeyboardInput.h  MeshRenderer.cpp  MeshRenderer.h  Red.h  Screen.cpp  Screen.h  ShaderProgram.cpp  ShaderProgram.h  Sound.cpp  Sound.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Red/src/game/: main.cpp
